Update .gitignore to exclude all Firebase service account keys

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+
+# Firebase Admin SDK Service Account Keys
+app/paige-ai-db-firebase-adminsdk-fbsvc-1f1930f7dd.json
+app/paige-ai-db-firebase-adminsdk-fbsvc-f02c312acd.json
+
 # Node modules
 node_modules/
 .pnp/
