--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "openai": "^4.100.0",
     "postcss": "8.4.38",
     "react": "latest",
+    "react-datepicker": "^8.4.0",
     "react-dom": "latest",
     "react-hot-toast": "^2.5.2",
     "tailwindcss": "^3.4.17",
