--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@tanstack/react-virtual": "^3.13.9",
     "autoprefixer": "10.4.19",
     "firebase": "^11.7.3",
     "firebase-admin": "^13.4.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/node": "22.15.18",
     "@types/react": "19.1.4",
+    "firebase-tools": "^14.6.0",
     "typescript": "5.8.3"
   }
 }
