Task Logic and Calendar

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@tanstack/react-virtual": "^3.13.9",
     "autoprefixer": "10.4.19",
+    "date-fns": "^4.1.0",
     "firebase": "^11.7.3",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.12.1",
@@ -20,6 +21,7 @@
     "openai": "^4.100.0",
     "postcss": "8.4.38",
     "react": "latest",
+    "react-big-calendar": "^1.19.2",
     "react-datepicker": "^8.4.0",
     "react-dom": "latest",
     "react-hot-toast": "^2.5.2",
