--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,53 @@
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Firebase
+firebase-service-account.json
+firebase-debug.log
+firebase-debug.*.log
+serviceAccountKey.json
+
+# IDE
+.idea/
+.vscode/
 
 # Firebase Admin SDK Service Account Keys
 app/paige-ai-db-firebase-adminsdk-fbsvc-1f1930f7dd.json
 app/paige-ai-db-firebase-adminsdk-fbsvc-f02c312acd.json
 
-# Node modules
-node_modules/
-.pnp/
-.pnp.js/
-
-# Next.js build output
-.next/
-out/ # If you're exporting static files
-
 # Environment variables
-.env
 .env.local
 .env.development.local
 .env.test.local
@@ -32,7 +66,6 @@ yarn-error.log*
 *.iml
 
 # OS generated files
-.DS_Store
 Thumbs.db
 
 # Logs
