--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "latest",
     "react-hot-toast": "^2.5.2",
     "tailwindcss": "^3.4.17",
+    "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
