--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "next": "latest",
     "openai": "^4.100.0",
     "postcss": "8.4.38",
+    "rc-slider": "^11.1.8",
     "react": "latest",
     "react-big-calendar": "^1.19.2",
     "react-datepicker": "^8.4.0",
     "react-dom": "latest",
     "react-hot-toast": "^2.5.2",
+    "react-range": "^1.10.0",
     "tailwindcss": "^3.4.17",
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.1.0"
