Enhance avatar upload: LQIP, persistent nav, 1MB limit, client-side compression, and bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -71,3 +71,4 @@ Thumbs.db
 # Logs
 logs/
 *.logpaige-ai-db-firebase-adminsdk-fbsvc-4bc526de4d.json
+paige-ai-db-firebase-adminsdk-fbsvc-4bc526de4d.json
