--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@hello-pangea/dnd": "^18.0.1",
     "@tanstack/react-virtual": "^3.13.9",
     "autoprefixer": "10.4.19",
+    "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
     "firebase": "^11.7.3",
     "firebase-admin": "^13.4.0",
@@ -25,6 +26,7 @@
     "react-big-calendar": "^1.19.2",
     "react-datepicker": "^8.4.0",
     "react-dom": "latest",
+    "react-easy-crop": "^5.4.2",
     "react-hot-toast": "^2.5.2",
     "react-range": "^1.10.0",
     "tailwindcss": "^3.4.17",
