feat: Refactor TodoTopBar and improve list name editing UI

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ Thumbs.db
 logs/
 *.logpaige-ai-db-firebase-adminsdk-fbsvc-4bc526de4d.json
 paige-ai-db-firebase-adminsdk-fbsvc-4bc526de4d.json
+paige-ai-db-firebase-adminsdk-fbsvc-4bc526de4d.json
