--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^12.12.1",
     "fuse.js": "^7.1.0",
     "googleapis": "^149.0.0",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "latest",
     "openai": "^4.100.0",
