--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@tanstack/react-virtual": "^3.13.9",
+    "@types/dompurify": "^3.0.5",
     "autoprefixer": "10.4.19",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.2.6",
+    "email-validator": "^2.0.4",
     "firebase": "^11.7.3",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.12.1",
