feat: Implement comprehensive vendor email management system
🎯 Major Features Added:
- Vendor email management with edit, flag, and remove capabilities
- Admin review system for flagged emails with approve/reject/remove actions
- Community-driven email verification with audit trails
- Enhanced vendor contact modal with email management integration
- Fixed duplicate React key issues across all components

🔧 Technical Improvements:
- New API endpoints: /api/vendor-emails/flag, /api/vendor-emails/flag/review
- Enhanced vendor emails API with PUT/DELETE methods
- Robust key generation system for React components
- Data validation and filtering for email/contact data
- Comprehensive error handling and debugging

📱 UI/UX Enhancements:
- Vendor email management modal with inline editing
- Admin flag review dashboard in settings
- Enhanced vendor contact modal with manage button
- Improved vendor catalog with better search and filtering
- Fixed modal positioning and animations

🛡️ Data Quality & Security:
- Multi-layer verification system (SMTP, manual, crowdsourced)
- Flag tracking and community oversight
- Full audit trail for all email operations
- Rate limiting and validation safeguards
- Admin-only flag review access

📚 Documentation:
- Comprehensive vendor email management guide
- Email setup guides for Gmail OAuth and SMTP
- Notification system documentation
- API endpoint documentation

🐛 Bug Fixes:
- Resolved duplicate React key warnings
- Fixed vendor catalog search functionality
- Improved error handling in contact modals
- Enhanced data validation and filtering

🔒 Security:
- Added .env.local.backup to .gitignore to prevent secret exposure

--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-virtual": "^3.13.9",
     "@types/dompurify": "^3.0.5",
     "autoprefixer": "10.4.19",
     "browser-image-compression": "^2.0.2",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
+    "dotenv": "^17.2.0",
     "email-validator": "^2.0.4",
     "firebase": "^11.7.3",
     "firebase-admin": "^13.4.0",
@@ -23,6 +25,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "latest",
+    "nodemailer": "^7.0.5",
     "openai": "^4.100.0",
     "postcss": "8.4.38",
     "rc-slider": "^11.1.8",
@@ -34,6 +37,7 @@
     "react-hot-toast": "^2.5.2",
     "react-range": "^1.10.0",
     "tailwindcss": "^3.4.17",
+    "twilio": "^5.7.3",
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.1.0"
   },
