--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,4 @@ logs/
 *.logpaige-ai-db-firebase-adminsdk-fbsvc-4bc526de4d.json
 paige-ai-db-firebase-adminsdk-fbsvc-4bc526de4d.json
 paige-ai-db-firebase-adminsdk-fbsvc-4bc526de4d.json
+.env.local.backup
