--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-easy-crop": "^5.4.2",
     "react-hot-toast": "^2.5.2",
     "react-range": "^1.10.0",
+    "swr": "^2.3.4",
     "tailwindcss": "^3.4.17",
     "twilio": "^5.7.3",
     "use-places-autocomplete": "^4.0.1",
