--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/dompurify": "^3.0.5",
     "autoprefixer": "10.4.19",
     "browser-image-compression": "^2.0.2",
+    "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.0",
