--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "latest",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "openai": "^4.100.0",
     "postcss": "8.4.38",
