--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dompurify": "^3.2.6",
     "dotenv": "^17.2.0",
     "email-validator": "^2.0.4",
+    "express-rate-limit": "^8.0.1",
     "firebase": "^11.7.3",
     "firebase-admin": "^13.4.0",
     "framer-motion": "^12.12.1",
