--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "^12.12.1",
     "fuse.js": "^7.1.0",
     "googleapis": "^149.0.0",
+    "ioredis": "^5.6.1",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "latest",
@@ -40,6 +41,7 @@
     "react-easy-crop": "^5.4.2",
     "react-hot-toast": "^2.5.2",
     "react-range": "^1.10.0",
+    "redis": "^5.6.0",
     "sharp": "^0.34.3",
     "swr": "^2.3.4",
     "tailwindcss": "^3.4.17",
