Add comprehensive category mapping safeguards and documentation
- Added validation functions to ensure category mapping consistency
- Created detailed Category System Guide with maintenance rules
- Added validation scripts for manual and pre-commit checking
- Updated package.json with validation npm scripts
- Added comprehensive documentation to README
- Implemented safeguards to prevent inconsistent category formatting
- Added special case handling for 'Venue' category mapping
- Created pre-commit validation script for automated checking
- Ensures breadcrumb consistency across all vendor pages

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "optimize-images": "node scripts/optimize-images.js"
+    "optimize-images": "node scripts/optimize-images.js",
+    "validate-categories": "node scripts/validate-categories.js",
+    "pre-commit-validation": "node scripts/pre-commit-validation.js"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
