🔧 Fix vendor search category filtering and implement comprehensive protection system
- Fix vendor search defaulting to florist for all categories
- Centralize category mapping logic in utils/vendorSearchUtils.ts
- Update all components to use centralized vendor search utility
- Add comprehensive validation scripts and pre-commit hooks
- Create detailed documentation and system guides
- Clean up debug logs and console statements
- Ensure consistent vendor search behavior across all categories

Components updated:
- AddContactModal, EditContactModal, OnboardingModal, VendorAssociationDrawer
- VendorSearchField with improved search logic and cache prevention

Protection system:
- Manual validation: npm run validate-vendor-search
- Pre-commit validation: npm run pre-commit-vendor-search
- Comprehensive documentation in VENDOR_SEARCH_SYSTEM_GUIDE.md

All vendor search categories now work correctly and are protected against future changes.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "next start",
     "optimize-images": "node scripts/optimize-images.js",
     "validate-categories": "node scripts/validate-categories.js",
-    "pre-commit-validation": "node scripts/pre-commit-validation.js"
+    "pre-commit-validation": "node scripts/pre-commit-validation.js",
+    "validate-vendor-search": "node scripts/validate-vendor-search.js",
+    "pre-commit-vendor-search": "node scripts/pre-commit-vendor-search.js"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
