--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@sendgrid/mail": "^8.1.5",
     "@tanstack/react-virtual": "^3.13.9",
     "@types/dompurify": "^3.0.5",
+    "@types/react-window": "^1.8.8",
     "autoprefixer": "10.4.19",
     "browser-image-compression": "^2.0.2",
     "critters": "^0.0.23",
@@ -45,6 +46,7 @@
     "react-easy-crop": "^5.4.2",
     "react-hot-toast": "^2.5.2",
     "react-range": "^1.10.0",
+    "react-window": "^1.8.11",
     "redis": "^5.6.0",
     "sharp": "^0.34.3",
     "swr": "^2.3.4",
