Fix micromenu overlap in constrained layouts
- Enhanced MicroMenu positioning logic to detect actual container boundaries
- Added container-aware space calculation for grid layouts
- Implemented multi-layer safety checks to prevent overlap with adjacent cards
- Fixed overlap issue when AI analysis panel constrains middle pane width
- Added 50px right edge buffer and 30px minimum space requirements
- Ensures consistent micromenu positioning across all layout scenarios

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-fetch": "^3.3.2",
     "nodemailer": "^7.0.5",
     "openai": "^4.100.0",
+    "pdfjs-dist": "^5.4.54",
     "postcss": "8.4.38",
     "rc-slider": "^11.1.8",
     "react": "latest",
