feat: Implement seating chart organizer with AddTableModal and improved avatar display
- Created AddTableModal with exact upgrade modal styling
- Fixed input field styles to match signup flow
- Improved avatar display with proper profile image loading
- Enhanced table layout with h6 font and better alignment
- Removed redundant capacity badges for cleaner design
- All styling now consistent with app's design system

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "fuse.js": "^7.1.0",
     "googleapis": "^149.0.0",
     "ioredis": "^5.6.1",
+    "konva": "^9.3.22",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "latest",
@@ -46,6 +47,7 @@
     "react-dom": "latest",
     "react-easy-crop": "^5.4.2",
     "react-hot-toast": "^2.5.2",
+    "react-konva": "^19.0.7",
     "react-range": "^1.10.0",
     "react-window": "^1.8.11",
     "redis": "^5.6.0",
