--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@sendgrid/mail": "^8.1.5",
+    "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.9",
     "@types/dompurify": "^3.0.5",
     "@types/react-window": "^1.8.8",
