--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "tailwindcss": "^3.4.17",
     "twilio": "^5.7.3",
     "use-places-autocomplete": "^4.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "22.15.18",
