--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-virtual": "^3.13.9",
     "@types/dompurify": "^3.0.5",
     "@types/react-window": "^1.8.8",
+    "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.19",
     "browser-image-compression": "^2.0.2",
     "critters": "^0.0.23",
