--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "validate-categories": "node scripts/validate-categories.js",
     "pre-commit-validation": "node scripts/pre-commit-validation.js",
     "validate-vendor-search": "node scripts/validate-vendor-search.js",
-    "pre-commit-vendor-search": "node scripts/pre-commit-vendor-search.js"
+    "pre-commit-vendor-search": "node scripts/pre-commit-vendor-search.js",
+    "migrate-edge-config": "node scripts/migrate-to-edge-config.js"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
@@ -18,6 +19,7 @@
     "@tanstack/react-virtual": "^3.13.9",
     "@types/dompurify": "^3.0.5",
     "@types/react-window": "^1.8.8",
+    "@vercel/edge-config": "^1.4.0",
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.19",
     "browser-image-compression": "^2.0.2",
