--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "autoprefixer": "10.4.19",
     "browser-image-compression": "^2.0.2",
+    "canvas-confetti": "^1.9.3",
     "critters": "^0.0.23",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.6",
