--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
     "@sendgrid/mail": "^8.1.5",
+    "@stripe/stripe-js": "^8.0.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.9",
     "@types/dompurify": "^3.0.5",
@@ -56,6 +57,7 @@
     "react-window": "^1.8.11",
     "redis": "^5.6.0",
     "sharp": "^0.34.3",
+    "stripe": "^19.0.0",
     "swr": "^2.3.4",
     "tailwindcss": "^3.4.17",
     "twilio": "^5.7.3",
@@ -67,6 +69,7 @@
     "@types/node": "22.15.18",
     "@types/react": "19.1.4",
     "firebase-tools": "^14.6.0",
+    "ngrok": "^5.0.0-beta.2",
     "typescript": "5.8.3"
   }
 }
