--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "pre-commit-validation": "node scripts/pre-commit-validation.js",
     "validate-vendor-search": "node scripts/validate-vendor-search.js",
     "pre-commit-vendor-search": "node scripts/pre-commit-vendor-search.js",
-    "migrate-edge-config": "node scripts/migrate-to-edge-config.js"
+    "migrate-edge-config": "node scripts/migrate-to-edge-config.js",
+    "populate-pinecone": "node scripts/populate-pinecone-wedding-knowledge.js"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
+    "@pinecone-database/pinecone": "^2.2.2",
     "@sendgrid/mail": "^8.1.5",
     "@stripe/stripe-js": "^8.0.0",
     "@tanstack/react-table": "^8.21.3",
