Fix email verification flow and EmailVerificationGuard
- Add proper redirect URL configuration for sendEmailVerification
- Handle verification success with URL parameter detection
- Create EmailVerificationGuard component for app-wide verification checks
- Fix AuthContext property references (loading vs authLoading)
- Email verification now redirects to signup page with success toast

Email verification flow:
1. User signs up with email/password
2. Firebase sends verification email with redirect to /signup?verified=true
3. User clicks link, gets redirected to signup page
4. Success toast shows, user proceeds to onboarding step 2

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "validate-vendor-search": "node scripts/validate-vendor-search.js",
     "pre-commit-vendor-search": "node scripts/pre-commit-vendor-search.js",
     "migrate-edge-config": "node scripts/migrate-to-edge-config.js",
-    "populate-pinecone": "node scripts/populate-pinecone-wedding-knowledge.js"
+    "populate-pinecone": "node scripts/populate-pinecone-wedding-knowledge.js",
+    "migrate-email-verification": "tsx scripts/migrate-email-verification.ts"
   },
   "dependencies": {
     "@hello-pangea/dnd": "^18.0.1",
