--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@stripe/stripe-js": "^8.0.0",
     "@tanstack/react-table": "^8.21.3",
     "@tanstack/react-virtual": "^3.13.9",
+    "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
     "@vercel/speed-insights": "^1.2.0",
     "browser-image-compression": "^2.0.2",
@@ -64,9 +65,9 @@
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.5",
     "@types/node": "22.15.18",
     "@types/react": "19.1.4",
-    "@types/dompurify": "^3.0.5",
     "@types/react-window": "^1.8.8",
     "autoprefixer": "10.4.19",
     "firebase-tools": "^14.6.0",
