feat: Paige intelligent agent Phase 1 (behind feature flag)
- Implemented contextual AI assistant on todo page
- Smart insights based on task analysis (overdue, deadlines, progress)
- Inline chat interface with OpenAI GPT-4o-mini
- Todo manipulation via chat (add deadlines, complete, update)
- List-aware suggestions (adapts to selected list)
- Smart vendor routing with location
- Wedding band disambiguation (jewelry vs musicians)
- Badge count on collapsed widget
- Workflow optimization suggestions
- Behind feature flag: NEXT_PUBLIC_ENABLE_INTELLIGENT_AGENT + NEXT_PUBLIC_AGENT_TEST_USERS
- Comprehensive roadmap for future phases (INTELLIGENT_AGENT_ROADMAP.md)

Components:
- PaigeContextualAssistant: Main floating widget
- /api/chat/paige: Chat endpoint with context awareness
- usePaigeChat: Feature flag hook
- Custom events for todo manipulation

Testing: Alpha (test accounts only), zero production impact

--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "migrate-email-verification": "tsx scripts/migrate-email-verification.ts"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^2.0.53",
+    "@floating-ui/dom": "^1.7.4",
+    "@floating-ui/react": "^0.27.16",
     "@hello-pangea/dnd": "^18.0.1",
     "@pinecone-database/pinecone": "^2.2.2",
+    "@radix-ui/react-popover": "^1.1.15",
     "@sendgrid/mail": "^8.1.5",
     "@stripe/stripe-js": "^8.0.0",
     "@tanstack/react-table": "^8.21.3",
@@ -24,6 +28,7 @@
     "@vercel/analytics": "^1.5.0",
     "@vercel/edge-config": "^1.4.0",
     "@vercel/speed-insights": "^1.2.0",
+    "ai": "^5.0.79",
     "browser-image-compression": "^2.0.2",
     "canvas-confetti": "^1.9.3",
     "critters": "^0.0.23",
@@ -53,6 +58,7 @@
     "react-dom": "latest",
     "react-easy-crop": "^5.4.2",
     "react-hot-toast": "^2.5.2",
+    "react-intersection-observer": "^9.16.0",
     "react-range": "^1.10.0",
     "react-window": "^1.8.11",
     "redis": "^5.6.0",
@@ -62,7 +68,8 @@
     "twilio": "^5.7.3",
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.1.0",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.5",
