--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "use-places-autocomplete": "^4.0.1",
     "uuid": "^11.1.0",
     "xlsx": "^0.18.5",
+    "zod": "^3.25.76",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
